Fix z-index for search bar

--- a/app/assets/stylesheets/logged_in_navbar.css
+++ b/app/assets/stylesheets/logged_in_navbar.css
@@ -88,7 +88,7 @@
 }
 
 .search-results {
-    z-index: 1000;
+    z-index: 2;
     position: relative;
     top: -12px;
     background: #fff;
